examples/test/conf/HTTPRoute/Filters/base/EndpointSlice_edgion-test_test-http.yaml
# HTTP Filters 测试套件共享后端服务端点
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-http
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-http
addressType: IPv4
ports:
  - name: http-30001
    port: 30001
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
