examples/test/conf/HTTPRoute/Filters/base/Service_edgion-test_test-http.yaml
# HTTP Filters 测试套件共享后端服务
apiVersion: v1
kind: Service
metadata:
  name: test-http
  namespace: edgion-test
spec:
  ports:
    - name: http-30001
      port: 30001
      protocol: TCP
      targetPort: 30001
  type: ClusterIP
